Fix shadow overlapping

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -34,7 +34,10 @@
     }
 }
 
-header {
+:host {
+    flex: 0 0 auto;
+    z-index: 1;
+
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
     ::ng-deep .dx-toolbar .dx-toolbar-item-content > .menu-button .dx-icon {
